--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,3 @@
-=== 1.0.0 / 2010-05-08
+=== 0.1.0 / 2010-05-21
 
-* First operational version.
+* First operational version. Can void_eval and eval on vectors. List needs more work
