--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 0.1.1 / 2010-05-21
+* List names works now
+
 === 0.1.0 / 2010-05-21
 
 * First operational version. Can void_eval and eval on vectors. List needs more work
