--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.1.4 / 2010-05-24
+* Bug fix: Incorrect NA for Logical, String and Double Vector
+* Factors implemented
+
 === 0.1.3 / 2010-05-24
 * Better README.txt
 * Implemented hash of options on Connection.new
