--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.2.1 / 2010-06-18
+* Added suport to assign ruby std lib Matrix. Bug fix on retrieving matrix
+* Fixed whitespace problem on README.txt
+
 === 0.2.0 / 2010-06-15
 * Session implemented. 
 * Retrieve auth information from server first responde. TODO: Implement authentification
