--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 0.2.2 / 2010-06-24
+* ¿Bug? fix: a R matrix with a 0 dims raise an error [clbustos]
+* Bug fix on rexpfactory: typo on creation of S4
+* Updated Spec: session doesn't tested on windows
+* Updated README.txt
+
 === 0.2.1 / 2010-06-18
 * Added suport to assign ruby std lib Matrix. Bug fix on retrieving matrix
 * Fixed whitespace problem on README.txt
