Updated History and library version

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 0.2.4 / 2010-07-06
+* Bug fixes: double vector with NaN crash to_ruby. Data frame with string row_names crash to_rubyC
+
 === 0.2.3 / 2010-07-02
 * Bug fix: assignation of double vector with NA doesn't work right
 
