--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 0.3.4 / 2017-08-27
+
+* Updated rserve_talk_spec to latest rspec
+* Deleted Gemfile.lock (545ch4 idea). Starting process to deprecate ruby 1.9
+* Corrected deprecation of Fixnum : https://github.com/545ch4/Rserve-Ruby-client/commit/ab27f5ccd95ed58dd325a0e073649f6b9b1b0727
+
 === 0.3.3 / 2017-07-06
 
 * Added support for crypt and plaintext authentication 
