--- a/History.txt
+++ b/History.txt
@@ -3,7 +3,7 @@
 * Updated rserve_talk_spec to latest rspec
 * Deleted Gemfile.lock (545ch4 idea). Starting process to deprecate ruby 1.9
 * Corrected deprecation of Fixnum : https://github.com/545ch4/Rserve-Ruby-client/commit/ab27f5ccd95ed58dd325a0e073649f6b9b1b0727
-
+* Removes unsafe require from gemspec : https://github.com/apptopia/Rserve-Ruby-client/commit/506b06d6c27e3d2a5302a8c2ffd17436ce4d36ad 
 === 0.3.3 / 2017-07-06
 
 * Added support for crypt and plaintext authentication 
